--- a/style.css
+++ b/style.css
@@ -2,3 +2,49 @@
     margin: 0;
     padding: 0;
 }
+
+.main-header{ 
+    padding: 10px;
+    width: 100%; 
+    background: #206E4F;
+    color: white; 
+    text-align: center;
+}
+h1 {
+    font-family: 'Major Mono Display', monospace;
+}
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .text {
+    background-color: rgba(32, 110, 79, 0.589);
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+  }
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    image-rendering: auto;
+  }
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  .row{ 
+      padding-top: 20px;
+  }
